fix: about card text overflow

--- a/assets/scss/components/_membercard.scss
+++ b/assets/scss/components/_membercard.scss
@@ -2,6 +2,7 @@
   background-color: $aboutcard-color;
   border-radius: 2rem;
   padding: 0.25rem;
+  padding-bottom: 0;
   display: flex;
   flex-direction: column;
 
@@ -9,7 +10,11 @@
     display: flex;
     flex-direction: row;
     position: relative;
+    height: inherit;
     padding: 1rem;
+    overflow: scroll hidden;
+    overflow-wrap: break-word;
+    clear: both;
 
     &-name {
       h2,
@@ -18,11 +23,19 @@
         font-family: "IBM Plex Mono";
       }
 
+      @media screen and (max-width: 767px) {
+        h2 {
+          font-size: 1.3em;
+        }
+      }
+
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: center;
+      height: max-content;
 
       margin: 0;
+      margin-top: 0rem;
       padding: 0;
       height: 80px;
       margin-left: 1.5rem;
@@ -39,17 +52,18 @@
   }
 
   &-description {
-    position: relative;
     display: flex;
     flex-direction: column;
     margin: 1.5rem;
     margin-top: 0;
+    height: max-content;
   }
 
   &-socials {
     font-size: larger;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     padding: 0.2rem;
 
     &-item {
@@ -63,6 +77,7 @@
       padding-top: 0.3rem;
       padding-bottom: 0.3rem;
       margin-right: 0.7rem;
+      margin-bottom: 0.7rem;
     }
   }
 }
